# bsc-genesis-contract

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  .snyk  .soliumignore  .soliumrc.json  BLSkeystore.json  CHANGELOG.md  COINvain Token  DHFDHFDHJFJ  LICENCE  README.md  SECURITY.md  asfvSDG  cnmcvmvbm  export-0x451adC653faeAbf181e521301838B147e553e359.csv  flatten.sh  foundry.toml  generate-crossStake.js  generate-crosschain.js  generate-genesis.js  generate-govhub.js  generate-headerrelayercontract.js  generate-initHolders.js  generate-relayerhub.js  generate-relayerincentivizecontract.js  generate-slash.js  generate-staking.js  generate-system.js  generate-systemReward.js  generate-tendermintlightclient.js  generate-tokenhub.js  generate-tranferrelayercontract.js  generate-validator.js  generate-validatorset.js  genesis-dev.json  genesis-template.json  genesis-testnet.json  (+16 more)
.devcontainer/: Selemela07 devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
abi/: README.md  airdrop.abi  bscgovernor.abi  bsctimelock.abi  bscvalidatorset.abi  crosschain.abi  govhub.abi  govtoken.abi  relayer.go  relayerhub.abi  relayerincentivize.abi  slashindicator.abi  stakecredit.abi  stakehub.abi  staking.abi  systemreward.abi  tendermintlightclient.abi  tendermintlightclient.go  tokenhub.abi  tokenhub.go  tokenmanager.abi  tokenrecoverportal.abi  validator.go
contracts/: ABCToken.sol  BSCGovernor.sol  BSCTimelock.sol  BSCValidatorSet.sol  BSCValidatorSet.template  Bytes.sol  BytesToTypes.sol  CrossChain.sol  CrossChain.template  CrossStake.sol  DEFToken.sol  (+42 more)
(+221 files in other folders)
