[tool.poetry]
name = "bsc-genesis-contract"
version = "0.1.0"
description = ""
authors = ["BNB Chain"]
license = "Apache2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
web3 = "6.11.4"
jinja2 = "3.1.4"
typer = "0.9.0"
typing-extensions = "4.8.0"
setuptools = "^69.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
