[tool.poetry]
name = "bsc-genesis-contract"
authors = ["BNB Chain"]
license = "Apache2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
web3 = "6.11.4"
jinja2 = "3.1.4"
typer = "0.9.0"
typing-extensions = "4.8.0"
setuptools = "^70.0.0"
pyunormalize = "^16.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
